--- a/ExpenseHead/src/main/webapp/WEB-INF/web.xml
+++ b/ExpenseHead/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 
-	<display-name>Split Easy</display-name>
+	<display-name>Expense Head</display-name>
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
