--- a/ExpenseHead/src/main/webapp/WEB-INF/jdbc.properties
+++ b/ExpenseHead/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/flights
+jdbc.databaseurl=jdbc:mysql://localhost:3306/expenseheaddb
 jdbc.username=root
 jdbc.password=root
