--- a/ExpenseHead/pom.xml
+++ b/ExpenseHead/pom.xml
@@ -128,6 +128,17 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- GSON Jars -->
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+
+
 	</dependencies>
 	<build>
 		<finalName>ExpenseHead</finalName>
