--- a/ExpenseHead/pom.xml
+++ b/ExpenseHead/pom.xml
@@ -136,7 +136,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
 		</dependency>
-
+      
+      
+       <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-webmvc</artifactId>
+	<version>${spring.version}</version>
+</dependency>
+       
 
 
 	</dependencies>
